--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -34,13 +34,13 @@ DockId=0x11111111,2
 
 [Window][Hierarchy]
 Pos=857,0
-Size=273,842
+Size=273,787
 Collapsed=0
 DockId=0x00000017,0
 
 [Window][Inspector]
 Pos=1132,0
-Size=788,842
+Size=788,787
 Collapsed=0
 DockId=0x00000018,0
 
@@ -113,8 +113,8 @@ Size=270,283
 Collapsed=0
 
 [Window][Console]
-Pos=857,844
-Size=345,217
+Pos=857,789
+Size=334,272
 Collapsed=0
 DockId=0x00000010,0
 
@@ -224,8 +224,8 @@ Size=471,166
 Collapsed=0
 
 [Window][Asset]
-Pos=1204,844
-Size=716,217
+Pos=1193,789
+Size=727,272
 Collapsed=0
 DockId=0x00000011,0
 
@@ -274,6 +274,11 @@ Pos=1193,0
 Size=727,810
 Collapsed=0
 DockId=0x00000018,1
+
+[Window][GameObjectEditor_EditLayout]
+Pos=809,36
+Size=32,144
+Collapsed=1
 
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
@@ -362,12 +367,12 @@ DockSpace             ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1920,1061 Spl
       DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=X Selected=0xF0D94A78
         DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=855,490 Selected=0xD1EB2482
         DockNode      ID=0x0000000B Parent=0x00000006 SizeRef=1063,490 Split=Y Selected=0x36DC96AB
-          DockNode    ID=0x0000000E Parent=0x0000000B SizeRef=1064,861 Split=X Selected=0x36DC96AB
+          DockNode    ID=0x0000000E Parent=0x0000000B SizeRef=1064,806 Split=X Selected=0x36DC96AB
             DockNode  ID=0x00000017 Parent=0x0000000E SizeRef=273,769 Selected=0xBABDAE5E
             DockNode  ID=0x00000018 Parent=0x0000000E SizeRef=788,769 CentralNode=1 Selected=0x36DC96AB
-          DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=1064,217 Split=X Selected=0xF0D94A78
-            DockNode  ID=0x00000010 Parent=0x0000000F SizeRef=345,307 Selected=0xEA83D666
-            DockNode  ID=0x00000011 Parent=0x0000000F SizeRef=716,307 Selected=0xF0D94A78
+          DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=1064,272 Split=X Selected=0xF0D94A78
+            DockNode  ID=0x00000010 Parent=0x0000000F SizeRef=334,307 Selected=0xEA83D666
+            DockNode  ID=0x00000011 Parent=0x0000000F SizeRef=727,307 Selected=0xF0D94A78
     DockNode          ID=0x00000007 Parent=0x0000000C SizeRef=558,810 Split=Y Selected=0xE7039252
       DockNode        ID=0x00000012 Parent=0x00000007 SizeRef=652,85 Selected=0x93DAEA18
       DockNode        ID=0x00000013 Parent=0x00000007 SizeRef=652,566 Selected=0x7DDCD467
