--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -810,6 +810,7 @@
     <FxCompile Include="Assets\Engine\Shaders\VS_PS\Particle\VertexEffect.VS.hlsl" />
     <FxCompile Include="Assets\Engine\Shaders\MS\EffectPlane.MS.hlsl" />
     <FxCompile Include="Assets\Engine\Shaders\CS\Particle\EmitParticle.CS.hlsl" />
+    <FxCompile Include="Assets\Engine\Shaders\CS\Particle\UpdateParticle.CS.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Engine\Shaders\MS\Triangle.hlsli" />
